#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSXtcInput
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-15-15
2015-03-5 David Schneider
- JIRA issue PSAS-85, add live mode support
	
Tag: V00-15-14
2015-03-3 David Schneider
- small data JIRA issue PSAS-85
- extend XtcInputModuleBase for small data
  detect live mode, 
  construct and use SmallDataProxy for every smd datagram
- fillEvent - was adding control stream datagrams to the event twice, and the
  dispatch was catching the duplicate key exception - change code to add control
  stream datagrams once
	
Tag: V00-15-13
2015-02-17 Christopher O'Grady
- Fix bug where software was looking for a configure transition
  in the second chunk of an ioc recorder stream.

Tag: V00-15-12
2015-02-12 David Schneider
- add parameter PSXtcInput.XtcInputModule.runLiveTimeout to get psana to wait for 
  new runs in live mode. JRIA issue PSAS-108

Tag: V00-15-11
2015-02-02 Christopher O'Grady
- Fix bug that was preventing IOC recorder EPICS data from getting into the
  eventstore:  send all IOC configure transitions together with the
  DAQ configure. Add correct XtcFileName objects to XtcInput::Dgram
  creation, so XtcInputModuleBase can handle the different configure
  datagrams correctly.

Tag: V00-15-10
2015-01-28 Christopher O'Grady
- Generate a fatal error when data is analyzed that has different
  archiving rates for different epics variables (unsupported by
  indexing).  This can be changed into a warning if the user
  sets allow-corrupt-epics in the [psana] section of the cfg file.

Tag: V00-15-09
2014-11-26 David Schneider
- Fix bug introduced in V00-14-00 which causes psana to hang on empty xtc file - see JIRA Issua PSAS-74

Tag: V00-15-08